--- a/index.html
+++ b/index.html
@@ -7,30 +7,48 @@
     <title>Yong's Portfolio</title>
   </head>
   <link rel="stylesheet" href="style.css">
+  <!-- google fonts Poppins -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <!-- fontawesome icons -->
   <script src="https://kit.fontawesome.com/4e0f1502df.js" crossorigin="anonymous"></script>
+  <!-- google icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <body>
+  <div class="nav">
+    <div class="nav--left">
+      <h2>Yong Pin</h2>
+    </div>
+    <div class="nav--right">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#" class="mr-3">Work</a>
+      <button class="nav__contact ml-1"><i class="fas fa-phone-alt mr-half"></i>Connect with me!</button>
+    </div>
+  </div>
   <div class="header">
-    <div class="header--left">
+    <div class="header--left ml-3">
       <p>Hi, I'm Yong</p>
-      <p>I'm a UI/UX designer and developer
-      currently based at South Cotabato, Philippines</p>
-      <button class="header__contact">Contact me!</button>
+      <p style="font-size: 3.5rem;">A Web Developer</p>
+      <p style="font-size: 1rem; color: rgba(100, 100, 100, 0.529);">currently based at South Cotabato, Philippines</p>
+      <div class="header__info">
+        <p>I turn your vision into awesome and responsive website.</p>
+      </div>
+      <button class="header__contact"><i style="font-size: 1.5rem;" class="fas fa-phone-alt mr-1"></i><h3>Connect with me!</h3></button>
     </div>
     <div class="header--right">
-      <!-- <img class="top__picture" src="https://avatars.githubusercontent.com/u/78200556?v=4" alt=""> -->
-      <img class="top__picture" src="my-picture.jfif" alt="">
-      <div class="header--links">
-        <!-- UI/UX Designer and Developer -->
+      <!-- <img class="header__picture" src="https://avatars.githubusercontent.com/u/78200556?v=4" alt=""> -->
+      <!-- <img class="header__picture" src="my-picture.jfif" alt=""> -->
+      <img class="header__picture" src="Bong, Yong Pin Lamigo3.png" alt="">
+      <!-- <div class="header--links">
         <a href="https://github.com/ypinbong"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/yong-pin-bong-31a025221/"><i class="fab fa-linkedin-in"></i></a>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
-      </div>
+      </div> -->
     </div>
   </div>
-  <div class="sidebar">
+  <!-- <div class="sidebar">
     <a class="sidebar__nav" href="#">
       <div class="sidebar__badge"></div>
       <p class="sidebar__text">Home</p>
@@ -47,6 +65,6 @@
       <div class="sidebar__badge"></div>
       <p class="sidebar__text">Contact Me</p>
     </a>
-  </div>
+  </div> -->
 </body>
 </html>
