--- a/index.html
+++ b/index.html
@@ -33,14 +33,20 @@
       <p style="font-size: 3.5rem;">A Web Developer</p>
       <p style="font-size: 1rem; color: rgba(100, 100, 100, 0.529);">currently based at South Cotabato, Philippines</p>
       <div class="header__info">
-        <p>I turn your vision into awesome and responsive website.</p>
+        <p>I turn your vision into websites.</p>
       </div>
       <button class="header__contact"><i style="font-size: 1.5rem;" class="fas fa-phone-alt mr-1"></i><h3>Connect with me!</h3></button>
     </div>
     <div class="header--right">
       <!-- <img class="header__picture" src="https://avatars.githubusercontent.com/u/78200556?v=4" alt=""> -->
       <!-- <img class="header__picture" src="my-picture.jfif" alt=""> -->
-      <img class="header__picture" src="Bong, Yong Pin Lamigo3.png" alt="">
+      <div class="picture__background">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <img class="header__picture" src="my-picture.jfif" alt="">
       <!-- <div class="header--links">
         <a href="https://github.com/ypinbong"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/yong-pin-bong-31a025221/"><i class="fab fa-linkedin-in"></i></a>
