some sections finished

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <p>I turn your vision into websites.</p>
       </div>
       <button class="header__contact"><i style="font-size: 1.5rem;" class="fas fa-phone-alt mr-1"></i><h3>Connect with me!</h3></button>
+      <div class="header--links">
+        <a href="https://github.com/ypinbong"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/yong-pin-bong-31a025221/"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+      </div>
     </div>
     <div class="header--right">
       <!-- <img class="header__picture" src="https://avatars.githubusercontent.com/u/78200556?v=4" alt=""> -->
@@ -46,14 +51,17 @@
         <div></div>
         <div></div>
       </div>
-      <img class="header__picture" src="my-picture.jfif" alt="">
-      <!-- <div class="header--links">
-        <a href="https://github.com/ypinbong"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/yong-pin-bong-31a025221/"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-      </div> -->
+      <!-- <img class="header__picture" src="my-picture.jfif" alt=""> -->
+      <img class="header__picture" src="Bong, Yong Pin Lamigo4.png" alt="">
     </div>
   </div>
+  <div class="section--second">
+    <div class="body--container">
+      
+    </div>
+  </div>
+  <div class="section--third"></div>
+  <div class="section--footer"></div>
   <!-- <div class="sidebar">
     <a class="sidebar__nav" href="#">
       <div class="sidebar__badge"></div>
