added a Download my CV nav in navigation bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#" class="mr-3">Work</a>
-      <button class="nav__contact ml-1"><i class="fas fa-phone-alt mr-half"></i>Connect with me!</button>
+      <a href="#" download='resume(Yong Pin Bong).pdf' target='_blank' rel="noopener noreferrer">Download my CV</a>
+      <button class="nav__contact ml-1"><i class="fas fa-phone-alt mr-half"></i>Connect with me</button>
     </div>
   </div>
   <div class="header">
@@ -35,7 +36,7 @@
       <div class="header__info">
         <p>I turn your vision into websites.</p>
       </div>
-      <button class="header__contact"><i style="font-size: 1.5rem;" class="fas fa-phone-alt mr-1"></i><h3>Connect with me!</h3></button>
+      <button class="header__contact"><i style="font-size: 1.5rem;" class="fas fa-phone-alt mr-1"></i><h3>Connect with me</h3></button>
       <div class="header--links">
         <a href="https://github.com/ypinbong"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/yong-pin-bong-31a025221/"><i class="fab fa-linkedin-in"></i></a>
