added under construction span at the top

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- google icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <body>
+  <span class="underConstruction">Under Construction</span>
   <div class="nav">
     <div class="nav--left">
       <h2>Yong Pin</h2>
